url bar on mobile devices fixed

--- a/src/global.scss
+++ b/src/global.scss
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
+#__next {
+    height: 100%;
+} // fix annoying url bars on mobile devices
+
 @layer components {
     .book-card {
         @apply bg-light-600 dark:bg-dark-700 text-dimmed-always p-1 rounded flex gap-1 transition-colors;
